--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.visualstudio": "2.0.11",
+    "com.unity.ide.vscode": "1.2.4",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
